<resources>
    <string name="app_name">Lumivote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username here</string>
    <string name="navbar_election_title">Presidential Election</string>
    <string name="navbar_congress_title">Congress</string>

    <!--Timeline -->
    <string name="timeline_title">Timeline</string>
    <string name="timeline_text">Timeline text</string>

    <!--Candidates -->
    <string name="candidates_title">Candidates</string>
    <string name="candidates_text">Candidate text</string>
    <string name="candidates_democrat">Democrat</string>
    <string name="candidates_republican">Republican</string>
    <string name="candidates_independent">Independent</string>

    <!--Starred -->
    <string name="starred_title">Starred</string>
    <string name="starred_candidates_list">starred_candidates</string>

    <!--Legislators -->
    <string name="legislators_title">Legislators</string>

    <!--People -->
    <!--Democrats -->
    <string-array name="democrats_array">
        <item>Hillary Clinton</item>
        <item>Bernie Sanders</item>
        <item>Martin O\'Malley</item>
        <item>Lincoln Chafee</item>
        <item>Jim Webb</item>
    </string-array>

    <string-array name="democrats_desc_array">
        <item>Former Secretary of State</item>
        <item>Vermont Senator</item>
        <item>Former Maryland Governor</item>
        <item>Former Rhode Island Governor</item>
        <item>Former Virginia Senator</item>
    </string-array>

    <string-array name="democrats_images_url" formatted="false">
        <item>https://theunitedstates.io/images/congress/original/C001041.jpg</item>
        <item>https://theunitedstates.io/images/congress/original/S000033.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Governor_O%27Malley_Portrait.jpg/640px-Governor_O%27Malley_Portrait.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Lincoln_Chafee_official_portrait.jpg/640px-Lincoln_Chafee_official_portrait.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/8/85/Jim_Webb_official_110th_Congress_photo.jpg</item>
    </string-array>

    <!--Republicans -->
    <string-array name="republican_array">
        <item>Donald Trump</item>
        <item>Ben Carson</item>
        <item>Jeb Bush</item>
        <item>Ted Cruz</item>
        <item>Marco Rubio</item>
        <item>Mike Huckabee</item>
        <item>Scott Walker</item>
        <item>John Kasich</item>
        <item>Carly Fiorina</item>
        <item>Chris Christie</item>
        <item>Lindsey Graham</item>
        <item>Bobby Jindal</item>
        <item>George Pataki</item>
        <item>Rand Paul</item>
        <item>Rick Perry</item>
        <item>Rick Santorum</item>
    </string-array>

    <string-array name="republican_desc_array">
        <item>Real Estate Mogul</item>
        <item>Retired Neurosurgeon</item>
        <item>Former Florida Governor</item>
        <item>Texas Senator</item>
        <item>Florida Senator</item>
        <item>Former Arkansas Governor</item>
        <item>Governor of Wisconsin</item>
        <item>Ohio Governor</item>
        <item>Former Business Executive</item>
        <item>New Jersey Governor</item>
        <item>South Carolina Senator</item>
        <item>Louisiana Governor</item>
        <item>Former New York Governor</item>
        <item>Kentucky Senator</item>
        <item>Former Texas Governor</item>
        <item>Former Pennsylvania Senator</item>
    </string-array>

    <string-array name="republican_images_url" formatted="false">
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Donald_Trump_March_2015.jpg/440px-Donald_Trump_March_2015.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Ben_Carson_at_CPAC_2015.jpg/440px-Ben_Carson_at_CPAC_2015.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Governor_of_Florida_Jeb_Bush_at_Southern_Republican_Leadership_Conference_May_2015_by_Michael_Vadon_16.jpg/440px-Governor_of_Florida_Jeb_Bush_at_Southern_Republican_Leadership_Conference_May_2015_by_Michael_Vadon_16.jpg</item>
        <item>https://theunitedstates.io/images/congress/original/C001098.jpg</item>
        <item>https://theunitedstates.io/images/congress/original/R000595.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Mike_Huckabee.jpg/440px-Mike_Huckabee.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Governor_Scott_Walker.jpg/440px-Governor_Scott_Walker.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Governor_John_Kasich.jpg/640px-Governor_John_Kasich.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Carly_fiorina_speaking.jpg/440px-Carly_fiorina_speaking.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Chris_Christie_April_2015.jpg/440px-Chris_Christie_April_2015.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Lindsey_Graham%2C_Official_Portrait_2006.jpg/640px-Lindsey_Graham%2C_Official_Portrait_2006.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Gov._Bobby_Jindal_in_Oklahoma_2015.jpg/440px-Gov._Bobby_Jindal_in_Oklahoma_2015.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/Governor_Pataki_2015.jpg/640px-Governor_Pataki_2015.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Rand_Paul%2C_official_portrait%2C_112th_Congress_alternate.jpg/640px-Rand_Paul%2C_official_portrait%2C_112th_Congress_alternate.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Gov._Perry_CPAC_February_2015.jpg/440px-Gov._Perry_CPAC_February_2015.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Rick_Santorum_by_Gage_Skidmore_8.jpg/440px-Rick_Santorum_by_Gage_Skidmore_8.jpg</item>
    </string-array>

    <!--Independents -->
    <string-array name="independents_array">
        <item>Jill Stein</item>
    </string-array>

    <string-array name="independents_desc_array">
        <item>Green Party Nominee</item>
    </string-array>

    <string-array name="independents_images_url" formatted="false">
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Jill_Stein_2012.jpg/640px-Jill_Stein_2012.jpg</item>
    </string-array>

    <!--Bills -->
    <string name="bills_title">Bills</string>
    <string name="bills_text">Bills text</string>

    <!--Votes -->
    <string name="votes_title">Votes</string>

    <!--Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_general_title">General</string>
    <string name="settings_general_images_title">Download images only over WiFi</string>
    <string name="settings_appearance_title">Appearance</string>
    <string name="settings_help_title">Help</string>
    <string name="settings_help_website_title">Visit Lumivote website</string>
    <string name="settings_help_website_link">http://lumivote.appspot.com</string>
    <string name="settings_help_rate_share">Rate and share</string>
    <string name="settings_help_rate_share_link">https://play.google.com/store/apps?hl=en</string>
    <string name="settings_help_github_title">Source code for app</string>
    <string name="settings_help_github_summary">Help contribute to Lumivote\'s development!</string>
    <string name="settings_help_github_link">https://github.com/alexdao/Lumivote</string>

    <!--About -->
    <string name="about_title">About</string>
    <string name="about_app">About text</string>
    <string name="about_text_title">Lumivote</string>
    <string name="about_summary">\nWe hope to make the U.S. government and politics more transparent, and therefore accountable, for all. We provide information on the political activities in the United States, including the 2016 election, the Senate, the House, bills, candidates, votes, etc.\n</string>
    <string name="about_libraries">Data is sourced from the Sunlight Congress API, GovTrack.us, congress-legislators database, and United States Images database. This app was built with the help of Picasso, ButterKnife, Retrofit, OKHttp, Gson, Otto and jsonschema2pojo. Special thanks to Jiawei Zhang for backend dev and Soojee Chung for design. The source code is available on Github.\n </string>
    <string name="about_license_text">Licensed under the Apache License, Version 2.0.</string>
    <string name="about_credit">Built by - Alex Dao\nalexdao.herokuapp.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_candidate_profile">CandidateProfileActivity</string>
</resources>
