<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_general_title">
        <CheckBoxPreference
            android:key="images_over_wifi"
            android:title="@string/settings_general_images_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_appearance_title">

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_help_title">

        <PreferenceScreen android:title="@string/settings_help_website_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://lumivote.appspot.com" />
        </PreferenceScreen>

        <PreferenceScreen android:title="@string/settings_help_github_title"
            android:summary="@string/settings_help_github_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/alexdao/Lumivote" />
        </PreferenceScreen>

    </PreferenceCategory>
</PreferenceScreen>